--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -11,3 +11,13 @@ spring.datasource.password=password
 spring.datasource2.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/practice
 spring.datasource2.username=root
 spring.datasource2.password=password
+
+
+active-mq.queue=aman.practice.queue
+
+active-mq.topic=aman.practice.topic
+
+active-mq.broker-url=tcp://localhost:61616
+
+spring.activemq.user=admin
+spring.activemq.password=admin
