--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -4,13 +4,15 @@ management.endpoint.health.show-details=always
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/practice
-spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.username=dev
+spring.datasource.password=devpassword
 
 
 spring.datasource2.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/practice
-spring.datasource2.username=root
-spring.datasource2.password=password
+spring.datasource2.username=dev
+spring.datasource2.password=devpassword
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 
 active-mq.queue=aman.practice.queue
