--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,8 +1,6 @@
 server.port=8082
 management.endpoint.health.show-details=always
 
-spring.jpa.hibernate.ddl-auto=update
-
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/practice
 spring.datasource.username=dev
 spring.datasource.password=devpassword
@@ -13,7 +11,9 @@ spring.datasource2.username=dev
 spring.datasource2.password=devpassword
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=create
 
 active-mq.queue=aman.practice.queue
 
